[tool.poetry]
name = "storm_paper_experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
pandas = "^2.0"
scikit-learn = "^1.4"
matplotlib = "^3.7"
seaborn = "^0.12"
ruptures = "^1.1"
jinja2 = "^3.1"
bidict = "^0.22"
numba = "^0.60.0"
statsmodels = "^0.14.3"
keras = "^3.5.0"
tensorflow = "^2.17.0"
tdqm = "^0.0.1"
jsonpickle = "^3.3.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
